// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`call constant function > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "address": {
            "memoryIndex": 0,
            "safeRange": {
              "byteAddress": 4,
              "memoryId": "output",
              "memoryIndex": 0,
              "safeByteLength": 4,
              "source": "memory-start",
            },
          },
          "isInteger": true,
          "type": "literal",
          "value": 4,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "getFortyTwo",
        },
      ],
      "instruction": "call",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
      "targetFunction": {
        "ast": {
          "functionEndLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "int",
              },
            ],
            "instruction": "functionEnd",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 2,
            "lineNumberBeforeMacroExpansion": 2,
          },
          "functionLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "getFortyTwo",
              },
            ],
            "instruction": "function",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 0,
            "lineNumberBeforeMacroExpansion": 0,
          },
          "id": "getFortyTwo",
          "lines": [
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "getFortyTwo",
                },
              ],
              "instruction": "function",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 0,
              "lineNumberBeforeMacroExpansion": 0,
            },
            {
              "arguments": [
                {
                  "isInteger": true,
                  "type": "literal",
                  "value": 42,
                },
              ],
              "instruction": "push",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 1,
              "lineNumberBeforeMacroExpansion": 1,
            },
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "int",
                },
              ],
              "instruction": "functionEnd",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 2,
              "lineNumberBeforeMacroExpansion": 2,
            },
          ],
          "signature": {
            "parameters": [],
            "returns": [
              "int",
            ],
          },
          "type": "function",
        },
        "body": [
          4,
          0,
          65,
          42,
          11,
        ],
        "id": "getFortyTwo",
        "locals": [],
        "signature": {
          "parameters": [],
          "returns": [
            "int",
          ],
        },
        "typeIndex": 3,
        "wasmIndex": 4,
      },
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`call constant function > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (result i32)))
  (import "js" "memory" (memory (;0;) 1 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 0
    i32.const 8
    memory.fill)
  (func (;1;) (type 0)
    call 5)
  (func (;2;) (type 0))
  (func (;3;) (type 0)
    (local i32)
    i32.const 128
    local.set 0
    loop  ;; label = @1
      call 1
      local.get 0
      i32.const 1
      i32.sub
      local.set 0
      local.get 0
      br_if 0 (;@1;)
    end)
  (func (;4;) (type 3) (result i32)
    i32.const 42)
  (func (;5;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 4
        call 4
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "init" (func 0))
  (export "cycle" (func 1))
  (export "initOnly" (func 2))
  (export "buffer" (func 3)))
"
`;

exports[`call constant function > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`call float64-returning function > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float64",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "address": {
            "memoryIndex": 0,
            "safeRange": {
              "byteAddress": 8,
              "memoryId": "output",
              "memoryIndex": 0,
              "safeByteLength": 12,
              "source": "memory-start",
            },
          },
          "isInteger": true,
          "type": "literal",
          "value": 8,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "getDoublePI",
        },
      ],
      "instruction": "call",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
      "targetFunction": {
        "ast": {
          "functionEndLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "float64",
              },
            ],
            "instruction": "functionEnd",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 4,
            "lineNumberBeforeMacroExpansion": 4,
          },
          "functionLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "getDoublePI",
              },
            ],
            "instruction": "function",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 0,
            "lineNumberBeforeMacroExpansion": 0,
          },
          "id": "getDoublePI",
          "lines": [
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "getDoublePI",
                },
              ],
              "instruction": "function",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 0,
              "lineNumberBeforeMacroExpansion": 0,
            },
            {
              "arguments": [
                {
                  "isFloat64": true,
                  "isInteger": false,
                  "type": "literal",
                  "value": 3.14159265358979,
                },
              ],
              "instruction": "push",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 1,
              "lineNumberBeforeMacroExpansion": 1,
            },
            {
              "arguments": [
                {
                  "isFloat64": true,
                  "isInteger": false,
                  "type": "literal",
                  "value": 2,
                },
              ],
              "instruction": "push",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 2,
              "lineNumberBeforeMacroExpansion": 2,
            },
            {
              "arguments": [],
              "instruction": "mul",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 3,
              "lineNumberBeforeMacroExpansion": 3,
            },
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "float64",
                },
              ],
              "instruction": "functionEnd",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 4,
              "lineNumberBeforeMacroExpansion": 4,
            },
          ],
          "signature": {
            "parameters": [],
            "returns": [
              "float64",
            ],
          },
          "type": "function",
        },
        "body": [
          21,
          0,
          68,
          17,
          45,
          68,
          84,
          251,
          33,
          9,
          64,
          68,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          64,
          162,
          11,
        ],
        "id": "getDoublePI",
        "locals": [],
        "signature": {
          "parameters": [],
          "returns": [
            "float64",
          ],
        },
        "typeIndex": 3,
        "wasmIndex": 4,
      },
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float64",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`call float64-returning function > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (result f64)))
  (import "js" "memory" (memory (;0;) 1 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 0
    i32.const 16
    memory.fill)
  (func (;1;) (type 0)
    call 5)
  (func (;2;) (type 0))
  (func (;3;) (type 0)
    (local i32)
    i32.const 128
    local.set 0
    loop  ;; label = @1
      call 1
      local.get 0
      i32.const 1
      i32.sub
      local.set 0
      local.get 0
      br_if 0 (;@1;)
    end)
  (func (;4;) (type 3) (result f64)
    f64.const 0x1.921fb54442d11p+1 (;=3.14159;)
    f64.const 0x1p+1 (;=2;)
    f64.mul)
  (func (;5;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 8
        call 4
        f64.store
        br 0 (;@2;)
      end
    end)
  (export "init" (func 0))
  (export "cycle" (func 1))
  (export "initOnly" (func 2))
  (export "buffer" (func 3)))
"
`;

exports[`call float64-returning function > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 8,
    "hasExplicitDefault": false,
    "id": "output",
    "isFloat64": true,
    "isInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "float64",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 3,
  },
}
`;

exports[`call function multiple times > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "address": {
            "memoryIndex": 0,
            "safeRange": {
              "byteAddress": 4,
              "memoryId": "output",
              "memoryIndex": 0,
              "safeByteLength": 4,
              "source": "memory-start",
            },
          },
          "isInteger": true,
          "type": "literal",
          "value": 4,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "getTwo",
        },
      ],
      "instruction": "call",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
      "targetFunction": {
        "ast": {
          "functionEndLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "int",
              },
            ],
            "instruction": "functionEnd",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 2,
            "lineNumberBeforeMacroExpansion": 2,
          },
          "functionLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "getTwo",
              },
            ],
            "instruction": "function",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 0,
            "lineNumberBeforeMacroExpansion": 0,
          },
          "id": "getTwo",
          "lines": [
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "getTwo",
                },
              ],
              "instruction": "function",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 0,
              "lineNumberBeforeMacroExpansion": 0,
            },
            {
              "arguments": [
                {
                  "isInteger": true,
                  "type": "literal",
                  "value": 2,
                },
              ],
              "instruction": "push",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 1,
              "lineNumberBeforeMacroExpansion": 1,
            },
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "int",
                },
              ],
              "instruction": "functionEnd",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 2,
              "lineNumberBeforeMacroExpansion": 2,
            },
          ],
          "signature": {
            "parameters": [],
            "returns": [
              "int",
            ],
          },
          "type": "function",
        },
        "body": [
          4,
          0,
          65,
          2,
          11,
        ],
        "id": "getTwo",
        "locals": [],
        "signature": {
          "parameters": [],
          "returns": [
            "int",
          ],
        },
        "typeIndex": 3,
        "wasmIndex": 4,
      },
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "getThree",
        },
      ],
      "instruction": "call",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
      "targetFunction": {
        "ast": {
          "functionEndLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "int",
              },
            ],
            "instruction": "functionEnd",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 2,
            "lineNumberBeforeMacroExpansion": 2,
          },
          "functionLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "getThree",
              },
            ],
            "instruction": "function",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 0,
            "lineNumberBeforeMacroExpansion": 0,
          },
          "id": "getThree",
          "lines": [
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "getThree",
                },
              ],
              "instruction": "function",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 0,
              "lineNumberBeforeMacroExpansion": 0,
            },
            {
              "arguments": [
                {
                  "isInteger": true,
                  "type": "literal",
                  "value": 3,
                },
              ],
              "instruction": "push",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 1,
              "lineNumberBeforeMacroExpansion": 1,
            },
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "int",
                },
              ],
              "instruction": "functionEnd",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 2,
              "lineNumberBeforeMacroExpansion": 2,
            },
          ],
          "signature": {
            "parameters": [],
            "returns": [
              "int",
            ],
          },
          "type": "function",
        },
        "body": [
          4,
          0,
          65,
          3,
          11,
        ],
        "id": "getThree",
        "locals": [],
        "signature": {
          "parameters": [],
          "returns": [
            "int",
          ],
        },
        "typeIndex": 3,
        "wasmIndex": 5,
      },
    },
    {
      "arguments": [],
      "instruction": "add",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 11,
      "lineNumberBeforeMacroExpansion": 11,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`call function multiple times > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (result i32)))
  (import "js" "memory" (memory (;0;) 1 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 0
    i32.const 8
    memory.fill)
  (func (;1;) (type 0)
    call 6)
  (func (;2;) (type 0))
  (func (;3;) (type 0)
    (local i32)
    i32.const 128
    local.set 0
    loop  ;; label = @1
      call 1
      local.get 0
      i32.const 1
      i32.sub
      local.set 0
      local.get 0
      br_if 0 (;@1;)
    end)
  (func (;4;) (type 3) (result i32)
    i32.const 2)
  (func (;5;) (type 3) (result i32)
    i32.const 3)
  (func (;6;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 4
        call 4
        call 5
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "init" (func 0))
  (export "cycle" (func 1))
  (export "initOnly" (func 2))
  (export "buffer" (func 3)))
"
`;

exports[`call function multiple times > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`call function with parameter > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "address": {
            "memoryIndex": 0,
            "safeRange": {
              "byteAddress": 8,
              "memoryId": "output",
              "memoryIndex": 0,
              "safeByteLength": 4,
              "source": "memory-start",
            },
          },
          "isInteger": true,
          "type": "literal",
          "value": 8,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
      "resolvedTarget": {
        "kind": "memory",
        "memoryItem": {
          "byteAddress": 4,
          "default": 0,
          "elementWordSize": 4,
          "hasExplicitDefault": false,
          "id": "input",
          "isInteger": true,
          "isPointingToPointer": false,
          "isUnsigned": false,
          "memoryIndex": 0,
          "numberOfElements": 1,
          "type": "int",
          "wordAlignedAddress": 1,
          "wordAlignedSize": 1,
        },
      },
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "double",
        },
      ],
      "instruction": "call",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
      "targetFunction": {
        "ast": {
          "functionEndLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "int",
              },
            ],
            "instruction": "functionEnd",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 5,
            "lineNumberBeforeMacroExpansion": 5,
          },
          "functionLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "double",
              },
            ],
            "instruction": "function",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 0,
            "lineNumberBeforeMacroExpansion": 0,
          },
          "id": "double",
          "lines": [
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "double",
                },
              ],
              "instruction": "function",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 0,
              "lineNumberBeforeMacroExpansion": 0,
            },
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "int",
                },
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "x",
                },
              ],
              "instruction": "param",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 1,
              "lineNumberBeforeMacroExpansion": 1,
            },
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "x",
                },
              ],
              "instruction": "push",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 2,
              "lineNumberBeforeMacroExpansion": 2,
              "resolvedTarget": {
                "kind": "local",
                "local": {
                  "index": 0,
                  "isInteger": true,
                },
              },
            },
            {
              "arguments": [
                {
                  "isInteger": true,
                  "type": "literal",
                  "value": 2,
                },
              ],
              "instruction": "push",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 3,
              "lineNumberBeforeMacroExpansion": 3,
            },
            {
              "arguments": [],
              "instruction": "mul",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 4,
              "lineNumberBeforeMacroExpansion": 4,
            },
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "int",
                },
              ],
              "instruction": "functionEnd",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 5,
              "lineNumberBeforeMacroExpansion": 5,
            },
          ],
          "signature": {
            "parameters": [
              "int",
            ],
            "returns": [
              "int",
            ],
          },
          "type": "function",
        },
        "body": [
          7,
          0,
          32,
          0,
          65,
          2,
          108,
          11,
        ],
        "id": "double",
        "locals": [],
        "signature": {
          "parameters": [
            "int",
          ],
          "returns": [
            "int",
          ],
        },
        "typeIndex": 3,
        "wasmIndex": 4,
      },
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 11,
      "lineNumberBeforeMacroExpansion": 11,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`call function with parameter > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (param i32) (result i32)))
  (import "js" "memory" (memory (;0;) 1 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 0
    i32.const 12
    memory.fill)
  (func (;1;) (type 0)
    call 5)
  (func (;2;) (type 0))
  (func (;3;) (type 0)
    (local i32)
    i32.const 128
    local.set 0
    loop  ;; label = @1
      call 1
      local.get 0
      i32.const 1
      i32.sub
      local.set 0
      local.get 0
      br_if 0 (;@1;)
    end)
  (func (;4;) (type 3) (param i32) (result i32)
    local.get 0
    i32.const 2
    i32.mul)
  (func (;5;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 8
        i32.const 4
        i32.load
        call 4
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "init" (func 0))
  (export "cycle" (func 1))
  (export "initOnly" (func 2))
  (export "buffer" (func 3)))
"
`;

exports[`call function with parameter > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "input",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
}
`;

exports[`function can call another function with its signature and wasm index available during compilation > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "address": {
            "memoryIndex": 0,
            "safeRange": {
              "byteAddress": 4,
              "memoryId": "output",
              "memoryIndex": 0,
              "safeByteLength": 4,
              "source": "memory-start",
            },
          },
          "isInteger": true,
          "type": "literal",
          "value": 4,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "compute",
        },
      ],
      "instruction": "call",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
      "targetFunction": {
        "ast": {
          "functionEndLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "int",
              },
            ],
            "instruction": "functionEnd",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 3,
            "lineNumberBeforeMacroExpansion": 3,
          },
          "functionLine": {
            "arguments": [
              {
                "referenceKind": "plain",
                "scope": "local",
                "type": "identifier",
                "value": "compute",
              },
            ],
            "instruction": "function",
            "isMemoryDeclaration": false,
            "isSemanticOnly": false,
            "lineNumberAfterMacroExpansion": 0,
            "lineNumberBeforeMacroExpansion": 0,
          },
          "id": "compute",
          "lines": [
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "compute",
                },
              ],
              "instruction": "function",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 0,
              "lineNumberBeforeMacroExpansion": 0,
            },
            {
              "arguments": [
                {
                  "isInteger": true,
                  "type": "literal",
                  "value": 41,
                },
              ],
              "instruction": "push",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 1,
              "lineNumberBeforeMacroExpansion": 1,
            },
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "increment",
                },
              ],
              "instruction": "call",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 2,
              "lineNumberBeforeMacroExpansion": 2,
              "targetFunction": {
                "id": "increment",
                "signature": {
                  "parameters": [
                    "int",
                  ],
                  "returns": [
                    "int",
                  ],
                },
                "wasmIndex": 4,
              },
            },
            {
              "arguments": [
                {
                  "referenceKind": "plain",
                  "scope": "local",
                  "type": "identifier",
                  "value": "int",
                },
              ],
              "instruction": "functionEnd",
              "isMemoryDeclaration": false,
              "isSemanticOnly": false,
              "lineNumberAfterMacroExpansion": 3,
              "lineNumberBeforeMacroExpansion": 3,
            },
          ],
          "signature": {
            "parameters": [],
            "returns": [
              "int",
            ],
          },
          "type": "function",
        },
        "body": [
          6,
          0,
          65,
          41,
          16,
          4,
          11,
        ],
        "id": "compute",
        "locals": [],
        "signature": {
          "parameters": [],
          "returns": [
            "int",
          ],
        },
        "typeIndex": 4,
        "wasmIndex": 5,
      },
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`function can call another function with its signature and wasm index available during compilation > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (param i32) (result i32)))
  (type (;4;) (func (result i32)))
  (import "js" "memory" (memory (;0;) 1 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 0
    i32.const 8
    memory.fill)
  (func (;1;) (type 0)
    call 6)
  (func (;2;) (type 0))
  (func (;3;) (type 0)
    (local i32)
    i32.const 128
    local.set 0
    loop  ;; label = @1
      call 1
      local.get 0
      i32.const 1
      i32.sub
      local.set 0
      local.get 0
      br_if 0 (;@1;)
    end)
  (func (;4;) (type 3) (param i32) (result i32)
    local.get 0
    i32.const 1
    i32.add)
  (func (;5;) (type 4) (result i32)
    i32.const 41
    call 4)
  (func (;6;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 4
        call 5
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "init" (func 0))
  (export "cycle" (func 1))
  (export "initOnly" (func 2))
  (export "buffer" (func 3)))
"
`;

exports[`function can call another function with its signature and wasm index available during compilation > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;
